tests/NormalTests/paczka1/small_fuzzy/85768600.err
Error in line 1: 5DF A300 4,3
Error in line 6: 5DF S34 71,3
Error in line 8: 5DF S704 12,8
Error in line 12: 5DF A300 60,0
